# mnistinterp

./: LICENSE  README.md  pyproject.toml  ruff.toml
src/mnistinterp/: __init__.py  dataset.py  mnist.py  util.py
src/mnistinterp/classif/: classif_cli.py  cli.py
src/mnistinterp/classif/config/: config.yaml
src/mnistinterp/classif/config/model/: conv.yaml  lenet.yaml  mlp.yaml
src/mnistinterp/classif/model/: conv.py  lenet5.py  mlp.py
src/mnistinterp/interp/: __init__.py  cli.py  dataset.py  eval_cli.py  interpfn.py  lossfn.py  solver.py
src/mnistinterp/interp/config/: config.yaml  eval.yaml
src/mnistinterp/interp/config/hydra/launcher/: jz_v100x1.yaml
src/mnistinterp/interp/config/interpfn/: linear.yaml
src/mnistinterp/interp/config/lossfn/: driftdenoise.yaml  velocitydenoise.yaml  velocityscore.yaml  xsandnoise.yaml  xx.yaml  xxz.yaml  xz.yaml
src/mnistinterp/interp/config/model/: unet.yaml
src/mnistinterp/interp/config/optimizer/: adamw.yaml
src/mnistinterp/interp/config/scheduler/: onecycle.yaml
src/mnistinterp/interp/config/solver/: euler.yaml  euler_maruyama.yaml  heun_maruyama.yaml
src/mnistinterp/model/: blocks.py  unet.py
